# NWChemEx

./: .buildinfo  .gitignore  .licenserc.yaml  CMakeLIsts.txt  CMakeLists.txt  Dockerfile  README.md  Untitled.ipynb  about_nwx.html  genindex.html  getting_started.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: .licenserc.yaml  nwx_pr_settings.cmake
.github/Dockerfile/: base-cmake.Dockerfile  base-numpy.Dockerfile
.github/actions/container-build_test_release/: action.yaml  entrypoint.sh
.github/workflows/: build_base.yaml  build_test_release-manual.yaml  build_test_release.yaml  c-cpp.yaml  deploy_docs.yaml  lint.yaml  merge.yaml  nightly.yaml  pull_request.yaml  tag_and_release.yaml  test_docs.yaml
.github/workflows/scripts/: get_dependencies.sh
NWChemEx/: CMakeLists.txt  CMakeLists.txt~  DefaultModuleManager.cpp  DefaultModuleManager.cpp~  DefaultModuleManager.hpp  DefaultModuleManager.hpp~  MethodWrappers.hpp  default_module_manager.cpp  default_module_manager.hpp  method_wrappers.cpp  method_wrappers.hpp  test.cpp  test.hpp
NWChemEx_Test/: TestSCF.py  TestSCF.py~
_sources/: about_nwx.rst.txt  getting_started.rst.txt  index.rst.txt
_sources/collaborator/: advanced_pluginplay.rst.txt  faqs.rst.txt  index.rst.txt  pluginplay_primer.rst.txt
_sources/installation/: building.rst.txt
_sources/module_api/: 3-21g.rst.txt  3-21g_atomic_basis.rst.txt  3-21g_atomic_dm.rst.txt  4-31g.rst.txt  4-31g_atomic_basis.rst.txt  5-21g.rst.txt  5-21g_atomic_basis.rst.txt  6-21g.rst.txt  6-21g_atomic_basis.rst.txt  6-31++g.rst.txt  6-31++g_.rst.txt  6-31++g__.rst.txt  6-31++g___atomic_basis.rst.txt  6-31++g__atomic_basis.rst.txt  6-31++g_atomic_basis.rst.txt  6-31+g.rst.txt  6-31+g_.rst.txt  6-31+g__.rst.txt  6-31+g___atomic_basis.rst.txt  6-31+g__atomic_basis.rst.txt  6-31+g_atomic_basis.rst.txt  6-311++g(2d,2p).rst.txt  6-311++g(2d,2p)_atomic_basis.rst.txt  6-311++g(3df,3pd).rst.txt  6-311++g(3df,3pd)_atomic_basis.rst.txt  6-311++g.rst.txt  6-311++g_.rst.txt  6-311++g__.rst.txt  6-311++g___atomic_basis.rst.txt  6-311++g__atomic_basis.rst.txt  6-311++g_atomic_basis.rst.txt  6-311+g(2d,p).rst.txt  6-311+g(2d,p)_atomic_basis.rst.txt  6-311+g.rst.txt  6-311+g_.rst.txt  6-311+g__.rst.txt  6-311+g___atomic_basis.rst.txt  6-311+g__atomic_basis.rst.txt  6-311+g_atomic_basis.rst.txt  6-311g(2df,2pd).rst.txt  (+476 more)
_sources/running/: running.rst.txt
_static/: documentation_options.js
cmake/: FindCppyy.cmake  FindCppyy.cmake~  cmaize_alias_fix.cmake  get_cpp.cmake  get_nwx_cmake.cmake  libfort_cmake_fix.cmake  nwx_python_mods.cmake  old_cmake_deps_fix.cmake
collaborator/: advanced_pluginplay.html  advanced_sde.html  faqs.html  index.html  pluginplay_primer.html  sde_primer.html
docs/: Makefile  README.md  build_docs.py  requirements.txt
docs/source/: about_nwx.rst  conf.py  getting_started.rst  index.rst
docs/source/collaborator/: advanced_pluginplay.rst  advanced_sde.rst  faqs.rst  index.rst  pluginplay_primer.rst  sde_primer.rst
docs/source/full_example/: full_toolchain_example.rst  index.rst
docs/source/installation/: building.rst
docs/source/module_api/: index.rst
docs/source/running/: index.rst  running.rst
dox/: .gitrepo  README.md  firstbuild.md  input.md  module_system.md
dox/uml/: program_structure.xml
end_to_end_driver/: driver.cpp  geometries.cpp  geometries.hpp
include/nwchemex/: apply_basis.hpp  load_modules.hpp  madness_cling.hpp  nwchemex.hpp
installation/: building.html  index.html
module_api/: 3-21g.html  3-21g_atomic_basis.html  3-21g_atomic_dm.html  4-31g.html  4-31g_atomic_basis.html  5-21g.html  5-21g_atomic_basis.html  6-21g.html  6-21g_atomic_basis.html  6-31++g.html  6-31++g_.html  6-31++g__.html  6-31++g___atomic_basis.html  6-31++g__atomic_basis.html  6-31++g_atomic_basis.html  6-31+g.html  6-31+g_.html  6-31+g__.html  6-31+g___atomic_basis.html  6-31+g__atomic_basis.html  6-31+g_atomic_basis.html  6-311++g(2d,2p).html  6-311++g(2d,2p)_atomic_basis.html  6-311++g(3df,3pd).html  6-311++g(3df,3pd)_atomic_basis.html  6-311++g.html  6-311++g_.html  6-311++g__.html  6-311++g___atomic_basis.html  6-311++g__atomic_basis.html  6-311++g_atomic_basis.html  6-311+g(2d,p).html  6-311+g(2d,p)_atomic_basis.html  6-311+g.html  6-311+g_.html  6-311+g__.html  6-311+g___atomic_basis.html  6-311+g__atomic_basis.html  6-311+g_atomic_basis.html  6-311g(2df,2pd).html  (+476 more)
nwchemex/: CMakeLists.txt  load_modules.cpp  load_modules.hpp  nwchemex_mm.cpp  nwchemex_mm.hpp
nwchemex_cxx_api/: annotated.html  apply__basis_8hpp_source.html  classes.html  classmadness_1_1RMI-members.html  classmadness_1_1RMI.html  dir_10f1d27026778e1e24c9761b9eeb37bd.html  dir_23a4d77cea23117b0b13f98f0424d676.html  dir_2eba7e9457073f49170f3fbc6e7403cf.html  dir_2eba7e9457073f49170f3fbc6e7403cf_dep.map  dir_2eba7e9457073f49170f3fbc6e7403cf_dep.md5  dir_5c0d64f70903e893b1efe571a4b8de29.html  dir_5c0d64f70903e893b1efe571a4b8de29_dep.map  dir_5c0d64f70903e893b1efe571a4b8de29_dep.md5  dir_6797d172400d925fcba0cf9811a9af4a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7cade4f587027b24467db2ce0cb94219.html  dir_d44c64559bbebec7f509842c48db8b23.html  driver__modules_8hpp_source.html  files.html  graph_legend.html  index.html  load__modules_8hpp_source.html  modules_8hpp_source.html  nwchemex_8hpp_source.html
nwchemex_cxx_api/search/: all_0.js  classes_0.js  searchdata.js
nwxtools/: demo.ipynb  nwxschema.py  nwxtools.py
running/: index.html  running.html
src/nwchemex/: auxiliary_basis.cpp  correlation_driver.cpp  load_modules.cpp  madness_cling.cpp  modules.hpp  reference_driver.cpp  system_hamiltonian.cpp  transformed_electronic_hamiltonian.cpp
src/python/: export_nwchemex.cpp
tests/: CMakeLists.txt  api.cpp  apply_basis.cpp  auxiliary_basis.cpp  derivatives.cpp  dfscf.cpp  dlpno_mp2.cpp  dlpno_mp2_python.py  driver.cpp  full_procedure.cpp  main.cpp  mp2.cpp  scf.cpp  scf_density.cpp  system_hamiltonian.cpp  test_common.hpp  test_main.cpp  test_python.py
tests/cxx/unit/: jk.cpp  (+4 more)
tests/mp2/: .mp2.cpp.swp  dlpno_mp2.cpp  mp2.cpp  mp2_f12.cpp
(+31 files in other folders)
